Change button name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <span>Numero de salle (ex: B5.01) <input id="room">
 
-<button type="button" onclick="myFunction()">Submit</button>
+<button type="button" onclick="myFunction()">Rechercher</button>
 
 <iframe id='ifr' frameborder="0" scrolling="no"></iframe>
 
