--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
 <head>
 	<style>
     	iframe { width: 100%; height: 500px; }
+
+		input[type=text] {
+		    width: 100%;
+		    padding: 12px 20px;
+		    margin: 8px 0;
+		    box-sizing: border-box;
+			font-size: 2em;
+		}
+
+
     </style>
 </head>
 
 <body>
 
-
-<span>Numero de salle (ex: B5.01) <input id="room">
+</br>
+</br>
+<span>            Numero de salle (ex: B5.01)   <input id="room">
 
 <button type="button" onclick="myFunction()">Rechercher</button>
 
