Change button name

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <body>
 
 </br>
+
+<p>Rentrer un numero de salle de la HEG dans la barre de recherche</p>
 </br>
 <span>            Numero de salle (ex: B5.01)   <input id="room">
 
